// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TextInput > should render correctly as a text area with rows 1`] = `
<DocumentFragment>
  <div
    class="govuk-form-group"
  >
    <div
      class="govuk-form-group"
      id="field-1"
    >
      <label
        class="govuk-label govuk-label--s"
        for="field-1-input"
      >
        Test Field
      </label>
      <div
        class=""
      >
        <textarea
          class="govuk-textarea w-3/4"
          id="field-1-input"
          maxlength="50"
          name="field1"
          rows="3"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextInput > should render correctly if input is disabled 1`] = `
<DocumentFragment>
  <div
    class="govuk-form-group"
  >
    <div
      class="govuk-form-group"
      id="field-1"
    >
      <label
        class="govuk-label govuk-label--s"
        for="field-1-input"
      >
        Test Field
      </label>
      <div
        class=""
      >
        <input
          class="govuk-input w-3/4"
          id="field-1-input"
          maxlength="50"
          name="field1"
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextInput > should render correctly with errors 1`] = `
<DocumentFragment>
  <div
    class="govuk-form-group"
  >
    <div
      class="govuk-form-group"
      id="field-1"
    >
      <label
        class="govuk-label govuk-label--s"
        for="field-1-input"
      >
        Test Field
      </label>
      <div
        class=""
      >
        <input
          class="govuk-input w-3/4"
          id="field-1-input"
          maxlength="50"
          name="field1"
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextInput > should render correctly with no errors 1`] = `
<DocumentFragment>
  <div
    class="govuk-form-group"
  >
    <div
      class="govuk-form-group"
      id="field-1"
    >
      <label
        class="govuk-label govuk-label--s"
        for="field-1-input"
      >
        Test Field
      </label>
      <div
        class=""
      >
        <input
          class="govuk-input w-3/4"
          id="field-1-input"
          maxlength="50"
          name="field1"
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
